--- a/index.html
+++ b/index.html
@@ -10,16 +10,22 @@
         <main>
             <div id="root"></div>
         </main>
-        <script src="http://unpkg.com/react@16.7.0/umd/react.production.min.js"></script>
-        <script src="http://unpkg.com/react-dom@16.7.0/umd/react-dom.production.min.js"></script>
-        <script>
+            <script src="http://unpkg.com/react@16.7.0/umd/react.production.min.js"></script>
+            <script src="http://unpkg.com/react-dom@16.7.0/umd/react-dom.production.min.js"></script>
+            <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
+            <script type="text/babel">
+                
+                class App extends React.Component {
+                    render(){
+                        return(
+                            <div>
+                                <h1>Coffee Time</h1>
+                            </div>
+                        )
+                    }
+                }
+                ReactDOM.render(<App /> , document.getElementById("root"));
 
-            const ourDiv = React.createElement("div", {children: "Anything I want"});
-
-
-            ReactDOM.render(ourDiv , document.getElementById("root"));
-
-        </script>
+            </script>
     </body> 
-    
 </html>
