trying this out

--- a/index.html
+++ b/index.html
@@ -7,43 +7,8 @@
         <link href="https://fonts.googleapis.com/css2?family=Hind+Vadodara:wght@300;400;500&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./styles.css">
     </head>
-    </body>
-        <main>
-            <div id="root"></div>
-        </main>
-            <script src="http://unpkg.com/react@16.7.0/umd/react.production.min.js"></script>
-            <script src="http://unpkg.com/react-dom@16.7.0/umd/react-dom.production.min.js"></script>
-            <script src="https://unpkg.com/@babel/standalone@7.8.3/babel.js"></script>
-            <script type="text/babel">
-                
-
-                function NavBar(){
-                    return (
-                    <nav className="navbar">
-                        <h1>C<span>o</span>ffee Inf<span>o</span> Sheet</h1>
-                        <button className="nav-toggle">
-                            <span class="hamburger"></span>
-                        </button>
-                    </nav>
-                        )
-                }
-
-
-
-
-
-
-                class App extends React.Component {
-                    render(){
-                        return(
-                            <div>
-                                <NavBar />
-                            </div>
-                        )
-                    }
-                }
-                ReactDOM.render(<App /> , document.getElementById("root"));
-
-            </script>
+    <body>
+         <div id="root"></div>
+        <script src="./index.js"></script>
     </body> 
 </html>
